--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.0",
     "load-grunt-tasks": "~0.1.0",
-    "grunt-angular-templates": "~0.4.2"
+    "grunt-angular-templates": "~0.4.2",
+    "grunt-contrib-watch": "~0.5.3"
   },
   "engines": {
     "node": ">=0.8.0"
