--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "src/views/*.html"
   ],
   "dependencies": {
-    "angular": "~1.0.8"
+    "angular": "~1.2.0",
+    "angular-route": "~1.2.9"
   },
   "main": [
     "src/styles/*",
